[tool.poetry]
name = "unity-initiator"
version = "0.1.0"
description = "Unity Initiator Framework"
authors = ["Gerald Manipon <pymonger@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/unity-sds/unity-initiator"
exclude = ['tests']
packages = [
    { include = "unity_initiator" },
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.0"
scripttest = "^1.3"
mock = "^5.1.0"
mockito = "^1.5.0"
flake8 = "^7.0.0"
pytest-cov = "^5.0.0"
flake8-junit-report = "^2.1.0"
flake8-string-format = "^0.3.0"
yamale = "^5.2.1"
prospector = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
